// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should be rendered correctly 1`] = `
<div
  className="root uui-text uui-size-36 lineHeight fontSize uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography container"
>
  Test
</div>
`;

exports[`Text should be rendered correctly 2`] = `
<div
  className="root uui-text uui-size-48 lineHeight fontSize uui-color-primary uui-font-weight-400 uui-font-style-normal uui-typography container"
  onClick={[Function]}
  style={
    Object {
      "--uui-text-font-size": "24px",
      "--uui-text-line-height": "30px",
    }
  }
>
  Test
</div>
`;
